--- a/estilo.css
+++ b/estilo.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Bree+Serif|Noto+Serif');
 
 body {
-  color:#37474f;
+  color:#FFC0CB;
   padding:0;
   margin:0;
   margin-bottom:5rem;
 font-family: 'Bree Serif', serif;
-  background:#e2f1f8;
+  background:#feffb5;
   line-height: 1.75;
 }
 
